# cprex

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  supervisord.conf
.github/workflows/: build.yml  pre_publish.yml  publish.yml  test.yml
.streamlit/: config.toml
cprex/: __init__.py  commands.py  pipeline.py
cprex/corpus/: corpus.py  script.py  tuples.py
cprex/crawler/: chemrxiv.py
cprex/displacy/: render.py  templates.py
cprex/ner/: abbreviations.py  chem_ner.py  properties.py  quantities.py
cprex/parser/: pdf_parser.py
cprex/pubchem/: linker.py
cprex/rel/: custom_functions.py  evaluate.py  parse_data.py  rel_model.py  rel_pipe.py
cprex/rel/configs/: rel_trf.cfg
cprex/ui/: streamlit.py  utils.py
notebooks/: ChemicalPropertiesExtraction.ipynb  Corpus.ipynb  ExtractionRelations.ipynb
resources/corpus/: corpus.json
tests/: test_pipeline.py
tests/ner/: test_properties.py  test_quantities.py
