[tool.poetry]
name = "cprex"
version = "0.2.0"
description = "Chemical Properties Relation Extraction"
authors = ["Jonas Renault <jonasrenault@gmail.com>", "Lucie Chasseur <lucie.chasseur@inria.fr>"]
readme = "README.md"
homepage = "https://github.com/jonasrenault/cprex#readme"
repository = "https://github.com/jonasrenault/cprex"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
ratelimit = "^2.2.1"
tqdm = "^4.66.2"
click = "^8.1.7"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
pandas = "^2.2.1"
spacy = "^3.7.4"
spacy-transformers = "^1.3.4"
transformers = ">=3.4.0,<4.37.0"
torch = "^2.2.1"
scikit-learn = "^1.4.1.post1"
grobid-quantities-client = "^0.4.0"


[tool.poetry.group.models]
optional = true

[tool.poetry.group.models.dependencies]
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.3.0"
black = "^24.2.0"
mypy = "^1.8.0"
bandit = "^1.7.7"
jupyterlab = "^4.1.3"


[tool.poetry.group.stubs]
optional = true

[tool.poetry.group.stubs.dependencies]
types-requests = "^2.31.0.20240218"
types-tqdm = "^4.66.0.20240106"
pandas-stubs = "^2.2.0.240218"
types-beautifulsoup4 = "^4.12.0.20240229"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cprex = "cprex.commands:cli"

[tool.black]
line_length = 90
target_version = ['py310']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
lint.ignore = []
line-length = 90
lint.select = [
    "E",
    "F",
    "W",
    "I001",
]
src = ["cprex", "tests"]

[tool.mypy]
files = ["cprex"]
exclude = ["^cprex/parser"]
